--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Swiper demo</title>
+    <title>泊头职业学院双选会</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
     <script type="text/javascript"
-            src="http://api.map.baidu.com/api?key=&v=1.1&services=5D2XsL9IE4P7HfgLTRSbGtBMIs4e5khG"></script>
+            src="https://api.map.baidu.com/api?key=&v=1.1&services=5D2XsL9IE4P7HfgLTRSbGtBMIs4e5khG"></script>
     <!-- Link Swiper's CSS -->
     <link rel="stylesheet" href="css/swiper.min.css">
     <link rel="stylesheet" href="css/animate.min.css">
@@ -242,7 +242,7 @@
 </div>
 <div id="music">
     <img class="music_tu" src="img/musicon.png">
-    <audio src="img/bgmusic.mp3" autoplay loop></audio>
+    <audio src="img/niubi.mp3" autoplay loop></audio>
 </div>
 <!-- Swiper JS -->
 <script src="js/swiper.min.js"></script>
